--- a/SQLLayer/SQLLayer.csproj
+++ b/SQLLayer/SQLLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01983813-89CD-4124-9C4C-F765AA08A057}</ProjectGuid>
+    <ProjectGuid>{D4011549-21E4-42A3-BB81-3AC0A4812CFD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ABCAutomotive.BusinessLayer</RootNamespace>
-    <AssemblyName>BusinessLayer</AssemblyName>
+    <RootNamespace>ABCAutomotive.SQLLayer</RootNamespace>
+    <AssemblyName>SQLLayer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,22 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factories\MainFactories.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Object Classes\Resource.cs" />
-    <Compile Include="Object Classes\Student.cs" />
-    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ABCAutomotive\Types.csproj">
-      <Project>{3331DE0E-C862-490A-9FA9-17F5CA57EADB}</Project>
+      <Project>{3331de0e-c862-490a-9fa9-17f5ca57eadb}</Project>
       <Name>Types</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SQLLayer\SQLLayer.csproj">
-      <Project>{d4011549-21e4-42a3-bb81-3ac0a4812cfd}</Project>
-      <Name>SQLLayer</Name>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj">
+      <Project>{a9eb96cc-9319-46e5-8776-38196cbca800}</Project>
+      <Name>DataAccessLayer</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
