--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Factories\MainFactories.cs" />
+    <Compile Include="Object Classes\Loan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Object Classes\Resource.cs" />
     <Compile Include="Object Classes\Student.cs" />
