--- a/SQLLayer/SQLLayer.csproj
+++ b/SQLLayer/SQLLayer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListsSQL.cs" />
     <Compile Include="MainSQL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
