--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -61,6 +61,18 @@
     <Compile Include="MainForms\Loans.Designer.cs">
       <DependentUpon>Loans.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForms\ModifyResourceStatus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForms\ModifyResourceStatus.Designer.cs">
+      <DependentUpon>ModifyResourceStatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForms\Reserve.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForms\Reserve.Designer.cs">
+      <DependentUpon>Reserve.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForms\Returns.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +104,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForms\Loans.resx">
       <DependentUpon>Loans.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForms\ModifyResourceStatus.resx">
+      <DependentUpon>ModifyResourceStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForms\Reserve.resx">
+      <DependentUpon>Reserve.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForms\Returns.resx">
       <DependentUpon>Returns.cs</DependentUpon>
@@ -143,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\loans.png" />
+    <None Include="Resources\reserve.png" />
     <Content Include="Resources\returns.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
