Updated Student Forms

--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForms\CreateStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForms\CreateStudent.Designer.cs">
+      <DependentUpon>CreateStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForms\Loans.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,11 +85,11 @@
     <Compile Include="MainForms\Returns.Designer.cs">
       <DependentUpon>Returns.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForms\Student.cs">
+    <Compile Include="MainForms\ManageStudent.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForms\Student.Designer.cs">
-      <DependentUpon>Student.cs</DependentUpon>
+    <Compile Include="MainForms\ManageStudent.Designer.cs">
+      <DependentUpon>ManageStudent.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -102,6 +108,9 @@
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MainForms\CreateStudent.resx">
+      <DependentUpon>CreateStudent.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForms\Loans.resx">
       <DependentUpon>Loans.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,8 +123,8 @@
     <EmbeddedResource Include="MainForms\Returns.resx">
       <DependentUpon>Returns.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForms\Student.resx">
-      <DependentUpon>Student.cs</DependentUpon>
+    <EmbeddedResource Include="MainForms\ManageStudent.resx">
+      <DependentUpon>ManageStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
