--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Object Classes\Authentication.cs" />
     <Compile Include="Factories\MainFactories.cs" />
     <Compile Include="Object Classes\Loan.cs" />
+    <Compile Include="Object Classes\Payment.cs" />
+    <Compile Include="PaymentMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Object Classes\Resource.cs" />
     <Compile Include="Object Classes\Student.cs" />
