--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -67,6 +67,12 @@
     <Compile Include="MainForms\Loans.Designer.cs">
       <DependentUpon>Loans.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainForms\MakePayment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForms\MakePayment.Designer.cs">
+      <DependentUpon>MakePayment.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForms\ModifyResourceStatus.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForms\Loans.resx">
       <DependentUpon>Loans.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForms\MakePayment.resx">
+      <DependentUpon>MakePayment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForms\ModifyResourceStatus.resx">
       <DependentUpon>ModifyResourceStatus.cs</DependentUpon>
