--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -47,12 +47,12 @@
     <Compile Include="Factories\MainFactories.cs" />
     <Compile Include="Object Classes\Loan.cs" />
     <Compile Include="Object Classes\Payment.cs" />
-    <Compile Include="PaymentMethods.cs" />
+    <Compile Include="CUD Classes\PaymentMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Object Classes\Resource.cs" />
     <Compile Include="Object Classes\Student.cs" />
-    <Compile Include="ResourceBorrowing.cs" />
-    <Compile Include="StudentCUD.cs" />
+    <Compile Include="CUD Classes\ResourceMethods.cs" />
+    <Compile Include="CUD Classes\StudentCUD.cs" />
     <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
