--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainForms\AddResource.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForms\AddResource.Designer.cs">
+      <DependentUpon>AddResource.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </Compile>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForms\AddResource.resx">
+      <DependentUpon>AddResource.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForms\CreateStudent.resx">
       <DependentUpon>CreateStudent.cs</DependentUpon>
