--- a/FrontEnd/App.config
+++ b/FrontEnd/App.config
@@ -13,6 +13,9 @@
             <setting name="password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="accessLevel" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ABCAutomotive.FrontEnd.Properties.Settings>
     </userSettings>
 </configuration>
